Added background stars

--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>Space Simulator</title>
 </head>
 <body style="background: black; padding: 0; margin: 0;">
-  <canvas id="canvas" style="padding: 0; margin: 0;"></canvas>
+  <canvas id="canvas2" style="padding: 0; margin: 0; position: absolute;"></canvas>
+  <canvas id="canvas" style="padding: 0; margin: 0; position: absolute;"></canvas>
 </body>
 <script src="index.js"></script>
 </html>
