--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Space Simulator</title>
 </head>
-<body style="background: black; padding: 0; margin: 0;">
+<body style="background: #050505; padding: 0; margin: 0;">
   <canvas id="canvas2" style="padding: 0; margin: 0; position: absolute;"></canvas>
   <canvas id="canvas" style="padding: 0; margin: 0; position: absolute;"></canvas>
 </body>
