--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body style="background: #050505; padding: 0; margin: 0;">
   <canvas id="canvas2" style="padding: 0; margin: 0; position: absolute;"></canvas>
+  <canvas id="canvas3" style="padding: 0; margin: 0; position: absolute;"></canvas>
   <canvas id="canvas" style="padding: 0; margin: 0; position: absolute;"></canvas>
 </body>
+<script src="fpsDisplay.js"></script>
 <script src="index.js"></script>
 </html>
