--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
   <canvas id="canvas" style="padding: 0; margin: 0; position: absolute;"></canvas>
 </body>
 <script src="fpsDisplay.js"></script>
+<script src="createConstantFPSGameLoop.js"></script>
 <script src="index.js"></script>
 </html>
