--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Space Simulator</title>
 </head>
 <body style="background: #050505; padding: 0; margin: 0;">
+  <img src="/space.jpg" style="width: 100%; height: 100%; position: absolute; z-index: -1; opacity: 10%;">
   <canvas id="canvas2" style="padding: 0; margin: 0; position: absolute;"></canvas>
   <canvas id="canvas3" style="padding: 0; margin: 0; position: absolute;"></canvas>
   <canvas id="canvas" style="padding: 0; margin: 0; position: absolute;"></canvas>
