--- a/index.html
+++ b/index.html
@@ -4,12 +4,149 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Space Simulator</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
-<body style="background: #050505; padding: 0; margin: 0;">
-  <img src="./space.jpg" style="width: 100%; height: 100%; position: absolute; z-index: -1; opacity: 10%;">
-  <canvas id="canvas2" style="padding: 0; margin: 0; position: absolute;"></canvas>
-  <canvas id="canvas3" style="padding: 0; margin: 0; position: absolute;"></canvas>
-  <canvas id="canvas" style="padding: 0; margin: 0; position: absolute;"></canvas>
+<body>
+  <img src="./space.jpg" alt="" class="bgImage">
+  <canvas id="canvas2"></canvas>
+  <canvas id="canvas3"></canvas>
+  <canvas id="canvas"></canvas>
+
+  <button class="menu-btn" popovertarget="menu">
+    <span class="">Settings</span>
+  </button>
+  
+  <nav popover id="menu">
+    <button class="close-btn" popovertarget="menu" popovertargetaction="hide">
+      <span aria-hidden="true">❌</span>
+      <span class="sr-only">Close menu</span>
+    </button>
+
+    <h3>Settings</h3>
+
+    <div class="menu-items">
+      <div class="menu-item">
+        <label for="collision">Body Collision<span>(x)</span></label>
+        <input type="checkbox" id="collision" checked>
+      </div>
+
+      <hr/>
+
+      <div class="menu-item">
+        <label for="showTrails">Show Trails</label>
+        <input type="checkbox" id="showTrails" checked>
+      </div>
+
+      <div class="menu-item">
+        <label for="showStars">Show stars</label>
+        <input type="checkbox" id="showStars" checked>
+      </div>
+
+      <div class="menu-item">
+        <label for="showVelocities">Show Velocities</label>
+        <input type="checkbox" id="showVelocities" checked>
+      </div>
+
+      <div class="menu-item">
+        <label for="showFPs">Show FPS</label>
+        <input type="checkbox" id="showFPs" checked>
+      </div>
+
+      <hr/>
+
+      <h5>Camera</h5>
+      <div class="menu-item">
+        <label>Controls</label>
+        <label>↑↓←→ / WASD </label>
+      </div>
+
+      <div class="menu-item">
+        <label for="followCam">Follow Camera<span>(space)</span></label>
+        <input type="checkbox" id="followCam">
+      </div>
+
+      <div class="menu-item">
+        <label for="camSpeed">Camera Speed</label>
+        <input type="number" id="camSpeed" value="5" min="1" max="100" step="1">
+      </div>
+
+      <div class="menu-item">
+        <button type="button" id="prev">Follow Prev<span>(n)</span></button>
+        <button type="button" id="next">Follow Next<span>(m)</span></button>
+      </div>
+
+      <hr/>
+
+      <h5>Planet</h5>
+
+      <div class="menu-item">
+        <label for="PlanetRadius">Radius</label>
+        <input type="number" id="PlanetRadius" value="4" min="0.5" max="20" step="0.5">
+      </div>
+
+      <div class="menu-item">
+        <label for="PlanetDensity">Density</label>
+        <input type="number" id="PlanetDensity" value="0.5" min="0.1" max="5" step="0.1">
+      </div>
+
+      <div class="menu-item">
+        <label for="PlanetColor">Color</label>
+        <input type="color" id="PlanetColor" value="#ffffff">
+      </div>
+
+      <hr/>
+
+      <h5>Star</h5>
+      <div class="menu-item">
+        <label for="StarRadius">Radius</label>
+        <input type="number" id="StarRadius" value="10" min="1" max="50" step="1">
+      </div>
+
+      <div class="menu-item">
+        <label for="StarDensity">Density</label>
+        <input type="number" id="StarDensity" value="2" min="1" max="20" step="0.5">
+      </div>
+
+      <div class="menu-item">
+        <label for="StarColor">Color</label>
+        <input type="color" id="StarColor" value="#ffa500">
+      </div>
+
+      <hr/>
+
+      <h5>Black Hole</h5>
+      <div class="menu-item">
+        <label for="BlackHoleRadius">Radius</label>
+        <input type="number" id="BlackHoleRadius" value="15" min="1" max="50" step="1">
+      </div>
+
+      <div class="menu-item">
+        <label for="BlackHoleDensity">Density</label>
+        <input type="number" id="BlackHoleDensity" value="30" min="5" max="200" step="5">
+      </div>
+
+      <div class="menu-item">
+        <label for="BlackHoleColor">Color</label>
+        <input type="color" id="BlackHoleColor" value="#000000">
+      </div>
+
+      <hr/>
+
+      <h5>Miscellaneous</h5>
+      <div class="menu-item misc">
+        <button type="button" id="threeBody">Three Body Problem<span>(t)</span></button>
+      </div>
+
+      <div class="menu-item misc">
+        <button type="button" id="cluster">Planet Cluster<span>(k)</span></button>
+      </div>
+
+      <div class="menu-item misc">
+        <button type="button" id="reset">Reset<span>(r)</span></button>
+      </div>
+
+    </div>
+  </nav>
 </body>
 <script src="fpsDisplay.js"></script>
 <script src="createConstantFPSGameLoop.js"></script>
