Linked all current UI features to javaascript to allow user to control the enviornment sandbox

--- a/index.html
+++ b/index.html
@@ -29,9 +29,25 @@
         <label for="collision">Body Collision<span>(x)</span></label>
         <input type="checkbox" id="collision" checked>
       </div>
+      
+      <div class="menu-item">
+        <label for="showVelocities">Show Velocities</label>
+        <input type="checkbox" id="showVelocities" checked>
+      </div>
+
+      <div class="menu-item">
+        <label for="showLabels">Show Labels</label>
+        <input type="checkbox" id="showLabels" checked>
+      </div>
+
+      <div class="menu-item">
+        <label for="showFPS">Show FPS</label>
+        <input type="checkbox" id="showFPS" checked>
+      </div>
 
       <hr/>
 
+      <h5>Improve Performance</h5>
       <div class="menu-item">
         <label for="showTrails">Show Trails</label>
         <input type="checkbox" id="showTrails" checked>
@@ -40,16 +56,6 @@
       <div class="menu-item">
         <label for="showStars">Show stars</label>
         <input type="checkbox" id="showStars" checked>
-      </div>
-
-      <div class="menu-item">
-        <label for="showVelocities">Show Velocities</label>
-        <input type="checkbox" id="showVelocities" checked>
-      </div>
-
-      <div class="menu-item">
-        <label for="showFPs">Show FPS</label>
-        <input type="checkbox" id="showFPs" checked>
       </div>
 
       <hr/>
@@ -73,6 +79,9 @@
       <div class="menu-item">
         <button type="button" id="prev">Follow Prev<span>(n)</span></button>
         <button type="button" id="next">Follow Next<span>(m)</span></button>
+      </div>
+      <div class="menu-item misc">
+        <button type="button" id="centerMass">Follow Center of Mass</button>
       </div>
 
       <hr/>
