Added velocity unit changing and light speed planet misc Other minor changes

--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
     <h3>Settings</h3>
 
     <div class="menu-items">
+
+      <div class="menu-item misc">
+        <button type="button" id="reset">Reset<span>(r)</span></button>
+      </div>
+
       <div class="menu-item">
         <label for="collision">Body Collision<span>(x)</span></label>
         <input type="checkbox" id="collision" checked>
@@ -33,6 +38,11 @@
       <div class="menu-item">
         <label for="showVelocities">Show Velocities</label>
         <input type="checkbox" id="showVelocities" checked>
+      </div>
+
+      <div class="menu-item">
+        <label for="velocityUnit">Velocity Unit</label>
+        <button type="button" id="velocityUnit">m/s</button>
       </div>
 
       <div class="menu-item">
@@ -63,7 +73,7 @@
       <h5>Camera</h5>
       <div class="menu-item">
         <label>Controls</label>
-        <label>↑↓←→ / WASD </label>
+        <label>↑↓←→ </label>
       </div>
 
       <div class="menu-item">
@@ -151,7 +161,7 @@
       </div>
 
       <div class="menu-item misc">
-        <button type="button" id="reset">Reset<span>(r)</span></button>
+        <button type="button" id="lightSpeedP">1/1000th Light Speed Planet</button>
       </div>
 
     </div>
