Refactored and break up code for easier development and readability

--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
     </div>
   </nav>
 </body>
-<script src="fpsDisplay.js"></script>
-<script src="createConstantFPSGameLoop.js"></script>
-<script src="index.js"></script>
+<script src="./variables/constAndVars.js"></script>
+<script src="./variables/domElements.js"></script>
+<script src="index.js" type="module"></script>
 </html>
