Fixed minor errors and added zoom ui buttons

--- a/index.html
+++ b/index.html
@@ -94,6 +94,16 @@
         <button type="button" id="centerMass">Follow Center of Mass</button>
       </div>
 
+      <div class="menu-item">
+        <label>Zoom</label>
+        <label>(<span>Scroll Wheel</span> )</label>
+      </div>
+
+      <div class="menu-item misc">
+        <button type="button" id="zoomMinus">Zoom In</button>
+        <button type="button" id="zoomPlus">Zoom Out</button>
+      </div>
+
       <hr/>
 
       <h5>Planet</h5>
