Added instruction prompts

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       </div>
 
       <div class="menu-item">
-        <label for="followCam">Follow Camera<span>(space)</span></label>
+        <label for="followCam">Follow Camera<span>(c)</span></label>
         <input type="checkbox" id="followCam">
       </div>
 
