Added function to spawn in the solar system and altered some config

--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
       </div>
 
       <div class="menu-item misc">
+        <button type="button" id="solarSystem">Solar System</button>
+      </div>
+
+      <div class="menu-item misc">
         <button type="button" id="lightSpeedP">1/1000th Light Speed Planet</button>
       </div>
 
