Fixed bug with over lapping planets Added new spawn template to spawn a miniature galaxy

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
       <hr/>
 
-      <h5>Miscellaneous</h5>
+      <h5>Spawn Presets</h5>
       <div class="menu-item misc">
         <button type="button" id="threeBody">Three Body Problem<span>(t)</span></button>
       </div>
@@ -172,6 +172,10 @@
 
       <div class="menu-item misc">
         <button type="button" id="solarSystem">Solar System</button>
+      </div>
+
+      <div class="menu-item misc">
+        <button type="button" id="galaxySpawn">Mini Galaxy<span>(g)</span></button>
       </div>
 
       <div class="menu-item misc">
