Modified fps display for performance monitoring and added stresstest

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       <div class="menu-item">
         <label for="showFPS">Show FPS</label>
-        <input type="checkbox" id="showFPS" checked>
+        <input type="checkbox" id="showFPS">
       </div>
 
       <hr/>
