added new deterministic spawn test

--- a/index.html
+++ b/index.html
@@ -182,6 +182,10 @@
         <button type="button" id="lightSpeedP">1/1000th Light Speed Planet</button>
       </div>
 
+      <div class="menu-item misc">
+        <button type="button" id="deterministicTest">Deterministic Test System<span>(y)</span></button>
+      </div>
+
     </div>
   </nav>
 </body>
