--- a/index.html
+++ b/index.html
@@ -55,6 +55,11 @@
         <input type="checkbox" id="showFPS">
       </div>
 
+      <div class="menu-item">
+        <label for="timeScale">Time Scale</label>
+        <input type="range" id="timeScale" min="0.1" max="100" step="0.1" value="1">
+      </div>
+
       <hr/>
 
       <h5>Improve Performance</h5>
