Add mass transfer toggle and conditional execution in collision handling

--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         <label for="collision">Body Collision<span>(x)</span></label>
         <input type="checkbox" id="collision" checked>
       </div>
+
+      <div class="menu-item">
+        <label for="massTransfer">Mass Transfer</label>
+        <input type="checkbox" id="massTransfer" checked>
+      </div>
       
       <div class="menu-item">
         <label for="showVelocities">Show Velocities</label>
