--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       </div>
 
       <div class="menu-item">
-        <label for="timeScale">Time Scale</label>
-        <input type="range" id="timeScale" min="0.1" max="100" step="0.1" value="1">
+        <label for="timeScale">Time Scale<span>(&lt; &gt;)</span></label>
+        <input type="number" id="timeScale" min="0.1" max="100" step="0.1" value="1">
       </div>
 
       <hr/>
