Add WebGL rendering support for celestial bodies and update canvas handling
- Introduced a new WebGL canvas for improved rendering performance.
- Updated the draw method in CelestialBody class to utilize WebGL for body rendering.
- Enhanced the resize function to accommodate the new WebGL canvas.
- Adjusted event listeners and drawing logic to integrate WebGL rendering.
- Updated CSS to manage z-index for multiple canvases effectively.

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <img src="./space.jpg" alt="" class="bgImage">
   <canvas id="canvas2"></canvas>
   <canvas id="canvas3"></canvas>
+  <canvas id="webglCanvas"></canvas>
   <canvas id="canvas"></canvas>
 
   <button class="menu-btn" popovertarget="menu">
