Added probe mode for better and easier observability of surrounding gravity and system

--- a/index.html
+++ b/index.html
@@ -219,6 +219,16 @@
 
       <hr/>
 
+      <h5>Space Probe</h5>
+      <div class="menu-item misc">
+        <span style="font-size: 12px; color: #aaa;">Press <strong>0</strong> to toggle probe mode</span>
+      </div>
+      <div class="menu-item misc">
+        <span style="font-size: 11px; color: #888;">Click to place, Ctrl/Cmd+Click to transition</span>
+      </div>
+
+      <hr/>
+
       <h5>Spawn Presets (num keys: select then click)</h5>
       <div class="menu-item misc">
         <button type="button" id="threeBody">Three Body Problem<span>(4)</span></button>
@@ -283,9 +293,27 @@
     <h3>Controls & Keybinds</h3>
     
     <div class="controls-content">
+      <h4>Space Probe</h4>
+      <div class="control-item">
+        <span class="key">0</span>
+        <span class="desc">Toggle Probe Mode</span>
+      </div>
+      <div class="control-item">
+        <span class="key">Click (in Probe Mode)</span>
+        <span class="desc">Place/Move probe</span>
+      </div>
+      <div class="control-item">
+        <span class="key">Ctrl/Cmd + Click</span>
+        <span class="desc">Smooth probe transition</span>
+      </div>
+      <div class="control-item">
+        <span class="key">Backspace (in Probe Mode)</span>
+        <span class="desc">Delete probe</span>
+      </div>
+
       <h4>Body Selection & Placement</h4>
       <div class="control-item">
-        <span class="key">0 / ESC</span>
+        <span class="key">ESC</span>
         <span class="desc">Deselect body</span>
       </div>
       <div class="control-item">
